[package]
name = "swc-plugin-react-refresh"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
serde_json = "1.0.107"
swc_common = "0.33.0"
swc_core = { version = "0.85.*", features = ["ecma_plugin_transform"] }

[dev-dependencies]
swc_ecma_parser = "0.141.3"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
